Add endpoint GET /order/user/:id - find order by user ID
